test_scores/negative_dimers/features/P34897.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P34897.pkl.xz